--- a/Surrogate/Surrogate.csproj
+++ b/Surrogate/Surrogate.csproj
@@ -35,9 +35,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Surrogate.Main.App</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Emgu.CV.World">
-      <HintPath>..\..\..\..\..\..\Emgu\emgucv-windesktop 3.4.1.2976\bin\Emgu.CV.World.dll</HintPath>
+    <Reference Include="JWT, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\JWT.2.3.2\lib\net45\JWT.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
@@ -56,6 +62,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -77,59 +86,66 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Implementations\ControllerTestModule.cs" />
-    <Compile Include="Implementations\MotorTestModule.cs" />
-    <Compile Include="Implementations\StartModule.cs" />
-    <Compile Include="Implementations\VideoChatModule.cs" />
+    <Compile Include="Implementations\Controller\MainController.cs" />
+    <Compile Include="Implementations\Handler\ConnectionsHandler.cs" />
+    <Compile Include="Implementations\Handler\ModuleHandler.cs" />
+    <Compile Include="Implementations\ConectionsChecker.cs" />
+    <Compile Include="Implementations\Controller\Module\ControllerTestModule.cs" />
+    <Compile Include="Implementations\Controller\Module\FaceDetectionModule.cs" />
+    <Compile Include="Implementations\Controller\Module\MotorTestModule.cs" />
+    <Compile Include="Implementations\Controller\Module\StartModule.cs" />
+    <Compile Include="Implementations\Controller\Module\VideoChatModule.cs" />
+    <Compile Include="Implementations\SurrogateFramework.cs" />
+    <Compile Include="Model\Connection.cs" />
+    <Compile Include="Model\ConnectionsHandler.cs" />
+    <Compile Include="Model\ModuleHandler.cs" />
     <Compile Include="Roboter\MController.cs" />
     <Compile Include="Roboter\MDatabase.cs" />
     <Compile Include="Roboter\MInternet.cs" />
     <Compile Include="Roboter\MMotor.cs" />
-    <Compile Include="Utils\ConectionsChecker.cs" />
     <Compile Include="Utils\ConsoleManager.cs" />
     <Compile Include="Utils\Event.cs" />
+    <Compile Include="Utils\UI.cs" />
+    <Compile Include="View\ControllerView\MainControllerView.xaml.cs">
+      <DependentUpon>MainControllerView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\IView.cs" />
-    <Compile Include="View\MotorTestView.xaml.cs">
+    <Compile Include="View\ControllerView\ModuleView\MotorTestView.xaml.cs">
       <DependentUpon>MotorTestView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ControllerTestView.xaml.cs">
+    <Compile Include="View\ControllerView\ModuleView\ControllerTestView.xaml.cs">
       <DependentUpon>ControllerTestView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\LoggingView.xaml.cs">
       <DependentUpon>LoggingView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\StartModuleView.xaml.cs">
+    <Compile Include="View\ControllerView\ModuleView\StartModuleView.xaml.cs">
       <DependentUpon>StartModuleView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\VideoChatView.xaml.cs">
+    <Compile Include="View\ControllerView\ModuleView\VideoChatView.xaml.cs">
       <DependentUpon>VideoChatView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ConnectionsCheckerView.xaml.cs">
       <DependentUpon>ConnectionsCheckerView.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Utils\Parameters.cs" />
-    <Compile Include="Implementations\FaceDetectionModule.cs" />
     <Compile Include="Utils\Properties.cs" />
     <Compile Include="Utils\NotifyAppender.cs" />
     <Compile Include="Utils\Log.cs" />
     <Compile Include="Controller\Module.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="View\MotorTestView.xaml">
+    <Page Include="View\ControllerView\MainControllerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ControllerView\ModuleView\MotorTestView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\ControllerTestView.xaml">
+    <Page Include="View\ControllerView\ModuleView\ControllerTestView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -137,11 +153,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\StartModuleView.xaml">
+    <Page Include="View\ControllerView\ModuleView\StartModuleView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\VideoChatView.xaml">
+    <Page Include="View\ControllerView\ModuleView\VideoChatView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -188,6 +204,7 @@
   <ItemGroup>
     <Resource Include="resources\Doc.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets" Condition="Exists('..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
