--- a/Surrogate/packages.config
+++ b/Surrogate/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net461" />
+  <package id="JWT" version="2.3.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="OpenTok" version="2.4.7" targetFramework="net461" />
   <package id="OpenTok.Client" version="2.13.0" targetFramework="net461" />
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.XInput" version="4.0.1" targetFramework="net461" />
