--- a/Surrogate/Surrogate.csproj
+++ b/Surrogate/Surrogate.csproj
@@ -15,6 +15,22 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -25,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +51,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Surrogate.Main.App</StartupObject>
@@ -61,14 +79,20 @@
       <HintPath>..\packages\SharpDX.XInput.4.0.1\lib\net45\SharpDX.XInput.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Data">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Xml.Linq">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
@@ -97,7 +121,7 @@
     <Compile Include="Implementations\Controller\Module\VideoChatModule.cs" />
     <Compile Include="Implementations\SurrogateFramework.cs" />
     <Compile Include="Model\Connection.cs" />
-    <Compile Include="Model\ConnectionsHandler.cs" />
+    <Compile Include="Model\Module.cs" />
     <Compile Include="Model\ModuleHandler.cs" />
     <Compile Include="Roboter\MController.cs" />
     <Compile Include="Roboter\MDatabase.cs" />
@@ -106,10 +130,10 @@
     <Compile Include="Utils\ConsoleManager.cs" />
     <Compile Include="Utils\Event.cs" />
     <Compile Include="Utils\UI.cs" />
+    <Compile Include="View\View.cs" />
     <Compile Include="View\ControllerView\MainControllerView.xaml.cs">
       <DependentUpon>MainControllerView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\IView.cs" />
     <Compile Include="View\ControllerView\ModuleView\MotorTestView.xaml.cs">
       <DependentUpon>MotorTestView.xaml</DependentUpon>
     </Compile>
@@ -125,8 +149,8 @@
     <Compile Include="View\ControllerView\ModuleView\VideoChatView.xaml.cs">
       <DependentUpon>VideoChatView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ConnectionsCheckerView.xaml.cs">
-      <DependentUpon>ConnectionsCheckerView.xaml</DependentUpon>
+    <Compile Include="View\ControllerView\ModuleView\ConnectionsHandlerView.xaml.cs">
+      <DependentUpon>ConnectionsHandlerView.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -161,7 +185,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ConnectionsCheckerView.xaml">
+    <Page Include="View\ControllerView\ModuleView\ConnectionsHandlerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -204,7 +228,18 @@
   <ItemGroup>
     <Resource Include="resources\Doc.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets" Condition="Exists('..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
