--- a/Surrogate/Surrogate.csproj
+++ b/Surrogate/Surrogate.csproj
@@ -114,10 +114,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\IMotor.cs" />
     <Compile Include="Controller\AbstractConroller.cs" />
     <Compile Include="Controller\IController.cs" />
     <Compile Include="Controller\IMainController.cs" />
-    <Compile Include="Controller\IModule.cs" />
     <Compile Include="Controller\IVisualModule.cs" />
     <Compile Include="Implementations\Controller\MainController.cs" />
     <Compile Include="Implementations\Controller\Module\BallFollowingModule.cs" />
@@ -131,25 +131,34 @@
     <Compile Include="Implementations\Controller\Module\VideoChatModule.cs" />
     <Compile Include="Implementations\SurrogateFramework.cs" />
     <Compile Include="Model\AbstractConnection.cs" />
+    <Compile Include="Model\AbstractProperties.cs" />
     <Compile Include="Model\Handler\IConnectionHandler.cs" />
     <Compile Include="Model\Handler\IProcessHandler.cs" />
     <Compile Include="Model\IConnection.cs" />
     <Compile Include="Model\IDatabaseConnection.cs" />
+    <Compile Include="Model\IModuleProperties.cs" />
     <Compile Include="Model\ModuleInfo.cs" />
     <Compile Include="Model\Handler\IModuleHandler.cs" />
-    <Compile Include="Model\ModuleProperties.cs" />
+    <Compile Include="Implementations\Model\ModuleProperties.cs" />
     <Compile Include="Connection\MController.cs" />
     <Compile Include="Connection\MDatabase.cs" />
     <Compile Include="Connection\MInternet.cs" />
     <Compile Include="Connection\MMotor.cs" />
+    <Compile Include="Model\ResourceNotFoundException.cs" />
     <Compile Include="Utils\ConsoleManager.cs" />
     <Compile Include="Utils\Event.cs" />
     <Compile Include="Utils\UI.cs" />
+    <Compile Include="View\ControllerView\ModuleView\HsvPickerView.xaml.cs">
+      <DependentUpon>HsvPickerView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ControllerView\ModuleView\LineFollowingModuleView.xaml.cs">
       <DependentUpon>LineFollowingModuleView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ControllerView\ModuleView\FaceDetectionView.xaml.cs">
       <DependentUpon>FaceDetectionView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\PropertieView\PropertiesView.xaml.cs">
+      <DependentUpon>PropertiesView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\View.cs" />
     <Compile Include="View\ControllerView\MainControllerView.xaml.cs">
@@ -186,6 +195,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\ControllerView\ModuleView\HsvPickerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ControllerView\ModuleView\LineFollowingModuleView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -215,6 +228,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ControllerView\ModuleView\ConnectionsHandlerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\PropertieView\PropertiesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -276,6 +293,9 @@
     <Resource Include="resources\haarcascade_frontalface_default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="resources\properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets" Condition="Exists('..\packages\OpenTok.Client.2.13.0\build\OpenTok.Client.targets')" />
